--- a/style.css
+++ b/style.css
@@ -4,24 +4,57 @@
     background-position: bottom;
     aspect-ratio: 4/3;
     height: 675px;
-    
+
 }
 
 .nav-color {
     background-color: rgb(56, 56, 56);
+    border-bottom: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(162, 228, 228);
 }
 
 .nav-brand {
     width: 100px;
 }
 
+.logo {
+    aspect-ratio: 7/5;
+    width: 75px;
+}
+
 .nav-links {
 width: 100px;
+}
+
+.icon-img {
+    aspect-ratio: 1/1;
+    width: 35px;
+}
+
+.decal {
+    border-radius: 2px;
+    border-color: rgb(162, 228, 228);
+    border-style: solid;
+    background-color: rgba(0, 0, 0, 0.445);
+}
+
+.ttl-txt {
+    border-top: 1px solid white;
 }
 
 .about-img {
     height: 400px;
     aspect-ratio: 1/1;
+}
+
+.about-color {
+    background-color: rgb(241, 241, 241);
+}
+
+.logo-img {
+    aspect-ratio: 7/5;
+    width: 135px;
 }
 
 .footer-background {
